--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,204 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Cedarville+Cursive&display=swap");
+@import url("https://fonts.cdnfonts.com/css/miama?styles=170364");
+
 * {
   margin: 0;
   padding: 0;
   font-family: "Inter", sans-serif;
+  /* background-color: black; */
+}
+
+/* hero sectiion starts  */
+
+.hero-section {
+  background: linear-gradient(
+    180deg,
+    rgb(17, 17, 17),
+    rgba(119, 119, 119, 0.99) 100%
+  );
+  color: white;
+  padding-top: 60px;
+  max-width: 1440px;
+  margin: 0 auto;
+}
+
+.hero-container {
+  width: 70%;
+  margin: 0 auto;
+}
+
+.nav-bar {
+  margin-bottom: 32px;
+  /* padding: 4px; */
+}
+
+.hamburger-menu {
+  display: none;
+  width: 24px;
+  height: 24px;
+}
+
+.hamburger-menu > img {
+  width: 100%;
+  object-fit: cover;
+}
+
+nav ul {
+  display: flex;
+  list-style-type: none;
+}
+
+a {
+  text-decoration: none;
+  color: white;
+}
+
+#fitness {
+  color: rgb(230, 83, 60);
+  font-size: 36px;
+  font-weight: 800;
+  font-style: italic;
+  line-height: 120%;
+}
+
+#home {
+  border-radius: 46px;
+  background: rgb(230, 83, 60);
+  font-weight: 600;
+}
+
+#shape {
+  font-family: "Miama", sans-serif;
+  font-weight: 400;
+}
+
+.nav-bar ul {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.right-nav {
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
+  font-size: 18px;
+  border-radius: 39px;
+  border: 1px solid rgba(255, 255, 255, 0.1);
+}
+.right-nav li {
+  padding: 8px 20px;
+  color: rgb(255, 255, 255);
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 22px;
+}
+
+.hero-content-container {
+  display: flex;
+  align-items: center;
+  gap: 50px;
+}
+
+.hero-content-container h2 {
+  font-size: 78px;
+  font-weight: 900;
+  line-height: 120%;
+  margin-bottom: 28px;
+}
+
+.hero-content-container p {
+  color: rgba(255, 255, 255, 0.5);
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0.5px;
+  margin-bottom: 28px;
+}
+
+.hero-content-container button {
+  padding: 16px 40px;
+  font-size: 18px;
+  font-weight: 600;
+  line-height: 22px;
+  color: white;
+  border-radius: 42px;
+  border: 1px solid white;
+}
+
+.hero-img-container {
+  display: flex;
+  align-items: flex-end;
+  position: relative;
+}
+
+#join-button {
+  background-color: rgb(230, 83, 60);
+  border: transparent;
+  margin-right: 14px;
+}
+#download-app-button {
+  background-color: black;
+  border: 1px solid transparent;
+}
+
+.hero-img-container button {
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  border-radius: 12px;
+  backdrop-filter: blur(20px);
+  background: rgba(255, 255, 255, 0.1);
+  color: rgba(255, 255, 255, 0.65);
+  font-size: 13px;
+  font-weight: 400;
+  line-height: 20px;
+  letter-spacing: 1px;
+  padding: 18px 20px;
+}
+
+#five-hundred {
+  font-size: 40px;
+  font-weight: 900;
+  line-height: 40px;
+  letter-spacing: 1px;
+  color: rgb(255, 255, 255);
+}
+
+#three-hundred {
+  color: rgb(250, 250, 249);
+  font-size: 24px;
+  font-weight: 900;
+  line-height: 24px;
+  letter-spacing: 0.3px;
+}
+
+.orange {
+  height: 25px;
+  width: 25px;
+  border-radius: 50%;
+  background-color: rgb(230, 83, 60);
+}
+
+.image-button-2 {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.image-button-content {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+#image-button-1 {
+  position: absolute;
+  top: 20%;
+  right: -20%;
+}
+
+#image-button-2 {
+  position: absolute;
+  top: 75%;
+  left: -30%;
 }
