--- a/styles/style.css
+++ b/styles/style.css
@@ -133,6 +133,11 @@ a {
   position: relative;
 }
 
+.join-download-div {
+  display: flex;
+  gap: 4px;
+}
+
 #join-button {
   background-color: rgb(230, 83, 60);
   border: transparent;
@@ -177,6 +182,19 @@ a {
   width: 25px;
   border-radius: 50%;
   background-color: rgb(230, 83, 60);
+  position: relative;
+}
+
+.triangle {
+  width: 0;
+  height: 0;
+  border-top: 8px solid transparent;
+  border-bottom: 8px solid transparent;
+  border-left: 18px solid white;
+  position: absolute;
+  left: 22%;
+  top: 14%;
+  transform: scale(0.75);
 }
 
 .image-button-2 {
@@ -200,5 +218,32 @@ a {
 #image-button-2 {
   position: absolute;
   top: 75%;
-  left: -30%;
+  left: -10%;
+}
+
+@media screen and (max-width: 576px) {
+  .right-nav {
+    display: none;
+  }
+
+  .hamburger-menu {
+    display: block;
+  }
+  .hero-content-container {
+    display: block;
+  }
+  .hero-content-container button {
+    padding: 16px;
+  }
+  #image-button-1 {
+    top: 5%;
+    right: -56px;
+  }
+  #image-button-2 {
+    top: 46%;
+    left: -4%;
+  }
+  .join-download-div {
+    justify-content: space-between;
+  }
 }
