--- a/styles/style.css
+++ b/styles/style.css
@@ -251,6 +251,8 @@ a {
 
 /* hero section ends  */
 
+/* habit section starts  */
+
 .section-container {
   max-width: 1440px;
   margin: 0 auto;
@@ -361,7 +363,8 @@ a {
   margin: 14px 0px;
 }
 
-.run-easily-container button {
+.run-easily-container button,
+.calculate-chart button {
   color: rgb(255, 255, 255);
   font-family: Inter;
   font-size: 18px;
@@ -402,3 +405,150 @@ a {
     object-fit: cover;
   }
 }
+
+/* habit section ends  */
+
+/* bmi section starts */
+.bmi-article {
+  padding: 1px;
+  width: 50%;
+  margin: 0 auto;
+}
+
+.bmi-article h3 {
+  color: rgb(255, 255, 255);
+  font-size: 48px;
+  font-weight: 900;
+  line-height: 120%;
+  margin: 32px 0px;
+}
+
+.bmi-article p {
+  color: rgba(255, 255, 255, 0.5);
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0.3px;
+  margin: 32px 0px;
+}
+
+.chart-calculation-container {
+  margin: 88px 0px;
+  background: rgb(34, 34, 34);
+  display: flex;
+  justify-content: space-around;
+  padding: 1px;
+}
+
+.chart-calculation-container h3 {
+  color: rgb(255, 255, 255);
+  font-family: Inter;
+  font-size: 28px;
+  font-weight: 900;
+  line-height: 120%;
+  margin: 52px 0 14px 0;
+}
+
+.bmi-table {
+  border-collapse: collapse;
+  margin: 52px 0;
+}
+
+.bmi-table td,
+.bmi-table th {
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  padding: 20px;
+  text-align: left;
+}
+
+.bmi-table thead th {
+  color: rgb(255, 255, 255);
+  font-family: Inter;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 120%;
+  letter-spacing: 0%;
+}
+
+.bmi-table tbody td {
+  color: rgba(255, 255, 255, 0.5);
+  font-family: Inter;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 120%;
+}
+
+.calculate-chart p {
+  color: rgba(255, 255, 255, 0.5);
+  font-family: Inter;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0.3px;
+  margin: 14px 0px;
+}
+
+.bmi-form {
+  margin: 40px 0;
+}
+
+.bmi-form input,
+.bmi-form select {
+  padding: 12px 40px;
+  border-radius: 8px;
+  border: none;
+  background: rgba(255, 255, 255, 0.1);
+  color: rgba(255, 255, 255, 0.6);
+  font-family: Inter;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 22px;
+  flex: 1 1 0;
+  margin: 5px 0;
+}
+
+.height-weight-input,
+.age-sex-input {
+  display: flex;
+  gap: 12px;
+}
+
+#factor {
+  width: 100%;
+}
+
+@media screen and (max-width: 576px) {
+  .bmi-article {
+    width: auto;
+    padding: 16px;
+  }
+  .bmi-article h3 {
+    font-size: 32px;
+    margin: 32px 0px;
+  }
+  .bmi-form {
+    margin: 24px 0;
+  }
+  .chart-calculation-container {
+    flex-direction: column;
+    margin: 24px 0;
+    padding: 16px;
+  }
+  .bmi-chart h3 {
+    font-size: 16px;
+  }
+  .bmi-table {
+    margin: 16px 0;
+    width: 100%;
+  }
+
+  .chart-calculation-container h3 {
+    margin-top: 14px;
+  }
+  .height-weight-input > *,
+  .age-sex-input > * {
+    width: calc(50% - 12px);
+  }
+}
+
+/* bmi chart ends here  */
